<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_title_home">主页</string>
    <string name="main_title_knowledge">体系</string>
    <string name="main_title_navigation">导航</string>
    <string name="main_title_question">问答</string>
    <string name="main_title_mine">我的</string>
    <string name="main_title_official_accounts">公众号</string>
    <string name="main_title_project">项目</string>

    <string name="main_login">登录</string>
</resources>